[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lztpay"
version = "0.1.0"
description = "Payment processing library for Lolz.live market"
authors = [{name = "Currison"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["lolz", "payment", "api", "async"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lztpay"]
